Fixing layout issues when resizing the window

--- a/app/assets/stylesheets/brandscopic.less
+++ b/app/assets/stylesheets/brandscopic.less
@@ -138,16 +138,6 @@ table.dataTable, table.tableScroller {
 	}
 }
 
-body.with-fixed-top {
-	padding-top: 92px;
-	header {
-		background: url(/assets/bg.jpg) repeat right top;
-	}
-	.nav-tabs {
-		margin: 0;
-	}
-}
-
 .scroll-table-wrapper {
 	max-height: 200px;
 	overflow: auto;
@@ -285,4 +275,11 @@ table.table td.comments-container {
 .help-block {
   font-size: 12px;
   color: #A0A0A0;
+}
+
+
+.task-counter-item {
+	width: auto;
+	margin-right: 20px;
+	float: left;
 }
